Kubernetes/apps/prod/istio-system/mesh-policies/peer-authentication-default.yaml
# Kubernetes/apps/prod/istio-system/mesh-policies/peer-authentication-default.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
  labels:
    app.kubernetes.io/name: peer-authentication-default
    app.kubernetes.io/component: mesh-security
    app.kubernetes.io/part-of: istio
    security.sinlessgames.io/mtls: strict
spec:
  mtls:
    mode: STRICT
