Kubernetes/apps/prod/istio-system/mesh-policies/authorizationpolicy-default-deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ingressgateway-default-deny
  namespace: istio-system
  annotations:
    "istio.io/dry-run": "true"
spec:
  selector:
    matchLabels:
      istio: ingressgateway
