Kubernetes/apps/prod/istio-system/mesh-policies/authorizationpolicy-ingress-allow.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ingress-allow-edge
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            ports:
              - "8080"
              - "8443"
